--- a/src/app/to-do/to-do.component.html
+++ b/src/app/to-do/to-do.component.html
@@ -1,68 +1,175 @@
 <body>
-    <div class="row main">
-        <div class="col-3 sidebar">
+  <div class="row main">
+    <div class="col-3 sidebar">
+        <div class="addForm" *ngIf="!showEditBox">
             <form class="example-form" [formGroup]="todoForm">
                 <mat-form-field class="example-full-width" appearance="fill">
                   <mat-label>Task</mat-label>
-                  <input matInput #message maxlength="256" formControlName="task">
+                  <input matInput #message maxlength="256" formControlName="task" />
                   <mat-hint align="start"><strong>Add task name.</strong> </mat-hint>
                 </mat-form-field>
-                <button mat-raised-button color="primary" [disabled]="todoForm.invalid" class="m-2" (click)="addTask()">Add task</button>
+                <button
+                  mat-raised-button
+                  color="primary"
+                  [disabled]="todoForm.invalid"
+                  class="m-2"
+                  (click)="addTask()"
+                >
+                  Add task
+                </button>
               </form>
         </div>
-        <div class="col-9 content">
-            <div class="row">
-                <div class="col-md-4 array">
-                    <div class="head">TO DO LIST</div>
-                    <div class="list">
-                        <div
-                        cdkDropList
-                        #todoList="cdkDropList"
-                        [cdkDropListData]="todo"
-                        [cdkDropListConnectedTo]="[progressList,doneList]"
-                        class="example-list"
-                        (cdkDropListDropped)="drop($event)"
-                        >
-                        <div class="example-box" [class.d-none]="todoEmpty" *ngFor="let item of todo" cdkDrag>{{item}}<i class="fa-solid fa-trash" (click)="delete(item)"></i></div>
-                        <div class="example-box" [class.d-none]="!todoEmpty"cdkDrag>Good Job! There's no pending task.</div>
-                      </div>
-                    </div>
-                </div>
-                <div class="col-md-4 array">
-                    <div class="head">IN PROGRESS</div>
-                    <div class="list">
-                        <div
-                        cdkDropList
-                        #progressList="cdkDropList"
-                        [cdkDropListData]="progress"
-                        [cdkDropListConnectedTo]="[todoList,doneList]"
-                        class="example-list"
-                        (cdkDropListDropped)="drop($event)"
-                        >
-                        <div class="example-box" [class.d-none]="progressEmpty" *ngFor="let item of progress" cdkDrag>{{item}}</div>
-                        <div class="example-box" *ngIf="progressEmpty && !todoEmpty"cdkDrag>You seem to be idle!</div>
-                        <div class="example-box" *ngIf="todoEmpty && progressEmpty"cdkDrag>Good Job! There's no pending task.</div>
-                    </div>
-                    </div>
-                </div>
-                <div class="col-md-4 array">
-                    <div class="head">DONE</div>
-                    <div class="list">
-                        <div
-                        cdkDropList
-                        #doneList="cdkDropList"
-                        [cdkDropListData]="done"
-                        [cdkDropListConnectedTo]="[progressList,todoList]"
-                        class="example-list"
-                        (cdkDropListDropped)="drop($event)"
-                        >
-                        <div class="example-box" [class.d-none]="doneEmpty" *ngFor="let item of done" cdkDrag>{{item}}</div>
-                        <div class="example-box" *ngIf="doneEmpty && (todoEmpty && progressEmpty)"cdkDrag>Nothing to show here!</div>
-                        <div class="example-box" *ngIf="doneEmpty && (!todoEmpty || !progressEmpty)"cdkDrag>You have lot to be done!!</div>
-                    </div>
-                  </div>
-                </div>
-            </div>
+        <div class="editBox" *ngIf="showEditBox">
+            <form class="example-form" [formGroup]="updateTodoForm">
+                <mat-form-field class="example-full-width" appearance="fill">
+                  <mat-label>Task</mat-label>
+                  <input matInput #message maxlength="256" formControlName="task" />
+                  <mat-hint align="start"><strong>Update task name.</strong> </mat-hint>
+                </mat-form-field>
+                <button
+                  mat-raised-button
+                  color="primary"
+                  [disabled]="updateTodoForm.invalid"
+                  class="m-2"
+                  (click)="updateTask()"
+                >
+                  Update task
+                </button>
+
+                <button
+                  mat-raised-button
+                  color="danger"
+                  [disabled]="updateTodoForm.invalid"
+                  class="m-2"
+                  (click)="cancelTask()"
+                >
+                  Cancel
+                </button>
+              </form>
         </div>
     </div>
+    <div class="col-9 content">
+      <div class="row">
+        <div class="col-md-4 array">
+          <div class="head">TO DO LIST</div>
+          <div class="list">
+            <div
+              cdkDropList
+              #todoList="cdkDropList"
+              [cdkDropListData]="todo"
+              [cdkDropListConnectedTo]="[progressList, doneList]"
+              class="example-list"
+              (cdkDropListDropped)="drop($event)"
+            >
+              <div
+                class="example-box"
+                [class.d-none]="todoEmpty"
+                *ngFor="let item of todo"
+                cdkDrag
+              >
+                {{ item
+                }}
+                <button class="btn btn-primary ms-auto me-4 updateBtn" (click)="edit(item)">
+                 <i
+                  class="fa-solid fa-pen"
+                ></i>   
+                </button>
+                
+                <button class="btn btn-danger deleteBtn" (click)="delete(item)">
+                  <i
+                    class="fa-solid fa-trash"
+                  ></i>
+                </button>
+              </div>
+              <div class="example-box bg-success text-light" [class.d-none]="!todoEmpty" cdkDrag>
+                Good Job! There's no pending task.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 array">
+          <div class="head">IN PROGRESS</div>
+          <div class="list">
+            <div
+              cdkDropList
+              #progressList="cdkDropList"
+              [cdkDropListData]="progress"
+              [cdkDropListConnectedTo]="[todoList, doneList]"
+              class="example-list"
+              (cdkDropListDropped)="drop($event)"
+            >
+              <div
+                class="example-box"
+                [class.d-none]="progressEmpty"
+                *ngFor="let item of progress"
+                cdkDrag
+              >
+                {{ item }}
+                <button class="btn btn-danger ms-auto me-4 deleteBtn" (click)="deleteInProgress(item)">
+                  <i
+                    class="fa-solid fa-trash"
+                  ></i>
+                </button>
+              </div>
+              <div
+                class="example-box bg-warning"
+                *ngIf="progressEmpty && !todoEmpty"
+                cdkDrag
+              >
+                You seem to be idle!
+              </div>
+              <div
+                class="example-box bg-success text-light"
+                *ngIf="todoEmpty && progressEmpty"
+                cdkDrag
+              >
+                Good Job! There's no pending task.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 array">
+          <div class="head">DONE</div>
+          <div class="list">
+            <div
+              cdkDropList
+              #doneList="cdkDropList"
+              [cdkDropListData]="done"
+              [cdkDropListConnectedTo]="[progressList, todoList]"
+              class="example-list"
+              (cdkDropListDropped)="drop($event)"
+            >
+              <div
+                class="example-box"
+                [class.d-none]="doneEmpty"
+                *ngFor="let item of done"
+                cdkDrag
+              >
+                {{ item
+                }}<button class="btn btn-danger deleteBtn" (click)="deleteInDone(item)">
+                  <i
+                    class="fa-solid fa-trash"
+                  ></i>
+                </button>
+              </div>
+              <div
+                class="example-box bg-success text-light"
+                *ngIf="doneEmpty && todoEmpty && progressEmpty"
+                cdkDrag
+              >
+                Nothing to show here!
+              </div>
+              <div
+                class="example-box bg-danger"
+                *ngIf="doneEmpty && (!todoEmpty || !progressEmpty)"
+                cdkDrag
+              >
+                You have lot to be done!!
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
